--- a/style.css
+++ b/style.css
@@ -53,21 +53,24 @@ body{
 }
 .line{
     display: inline-block;
-    padding-right: 68px;
-    padding-left: 80px;
-
-    border-bottom: 1px solid black;}
-/* font awsome */
-.contain1 .fa-linkedin{
-    position: absolute;
-
-left: 200px;
-top: 15px;
+    padding-right: 55px;
+    padding-left: 50px;
+    border-bottom: 1px solid black;
 }
-.contain1 .fa-github{
+
+.fontje{
+    font-family: 'VT323', monospace;
+}
+/* font awsome */
+.contain5 .fa-linkedin{
+    position: absolute;
+    right: 165px;
+    margin-top: 50px;
+}
+.contain5 .fa-github{
 position: absolute;
-left: 640px;
-top: 15px;
+right: 60px;
+margin-top: 50px;
 }
 /* ---------------------- */
 
@@ -131,25 +134,25 @@ height: 25px;
   /* ---------------------- */
 
 /* link effect fonts */
-   .contain1 a:link {
+   .contain5:link {
     color: black; 
     background-color: transparent; 
     text-decoration: none;
   }
   
-  .contain1 a:visited {
+  .contain5:visited {
     color: black;
     background-color: transparent;
     text-decoration: none;
   }
   
-  .contain1 a:hover {
+  .contain5:hover {
     color: orange;
     background-color: transparent;
     text-decoration: underline;
   }
   
-  .contain1 a:active {
+  .contain5:active {
     color: grey;
     background-color: transparent;
     text-decoration: underline;
@@ -161,13 +164,13 @@ height: 25px;
   }
 
 .button{
-        position: relative;
-      display: inline-block;
-      font-size: 25px; 
-      top: 50px;
-      left: 100px;
-      background-color: rgb(48, 48, 48);
-     padding: 0.3em 1.2em;
+    position: relative;
+    display: inline-block;
+    font-size: 25px; 
+    top: 50px;
+    left: 100px;
+    background-color: rgb(48, 48, 48);
+    padding: 0.3em 1.2em;
     border: 0.16em solid rgba(255,255,255,0);
     border-radius: 2em;
     box-sizing: border-box;
